Support for all deployment options(Yarn,Mesos,Standalone)