@@ -85,6 +85,29 @@ id=$([ -f "$pid" ] && echo $(wc -l < "$pid") || echo "0")
 FLINK_LOG_PREFIX="${FLINK_LOG_DIR}/flink-${FLINK_IDENT_STRING}-${DAEMON}-${id}-${HOSTNAME}"
 log="${FLINK_LOG_PREFIX}.log"
 out="${FLINK_LOG_PREFIX}.out"
+gclog="${FLINK_LOG_PREFIX}.gc_log"
+
+if [ ${FLINK_JVM_GC_LOGGING} ];then
+    FLINK_JVM_GC_LOGGING_OPTS="-XLoggc:${gclog} " \
+      "-XX:+PrintGCApplicationStoppedTime " \
+			"-XX:+PrintGCDetails " \
+			"-XX:+PrintGCDateStamps " \
+			"-XX:+UseGCLogFileRotation " \
+			"-XX:NumberOfGCLogFiles=10 " \
+			"-XX:GCLogFileSize=10M " \
+			"-XX:+PrintPromotionFailure " \
+			"-XX:+PrintGCCause"
+		JVM_ARGS="${FLINK_JVM_GC_LOGGING_OPTS} ${JVM_ARGS}"
+fi
+
+FLINK_HEAPDUMP_NAME="flink-${FLINK_IDENT_STRING}-${DAEMON}-${id}-${HOSTNAME}.hprof"
+if [ ${FLINK_JVM_HEAPDUMP_ON_OOM} ];then
+    FLINK_JVM_HEAPDUMP_OPTS="-XX:+HeapDumpOnOutOfMemoryError " \
+      "-XX:HeapDumpPath=${FLINK_JVM_HEAPDUMP_DIRECTORY}/${FLINK_HEAPDUMP_NAME} " \
+      "-XX:OnOutOfMemoryError=\"echo -e 'OutOfMemoryError! Killing current process %p...\n" \
+      "Check gc logs and heapdump file(${FLINK_JVM_HEAPDUMP_DIRECTORY}/${FLINK_HEAPDUMP_NAME}) for details.' > ${out}; kill -9 %p\""
+    JVM_ARGS="${FLINK_JVM_HEAPDUMP_OPTS} ${JVM_ARGS}"
+fi
 
 log_setting=("-Dlog.file=${log}" "-Dlog4j.configuration=file:${FLINK_CONF_DIR}/log4j.properties" "-Dlogback.configurationFile=file:${FLINK_CONF_DIR}/logback.xml")
 
